[package]
name = "firstchapter_asyncawait"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "*", features = ["full"]} 
futures = {version = "*"}
rust_futures_for_string ={ path = "rust_futures_for_string"}